@@ -58,6 +58,11 @@ Extensions::Extensions()
                << "rt" << "utf" << "aqt";
 
 	_playlist << "m3u" << "m3u8";
+
+	_multimedia = _video;
+	for (int n = 0; n < _audio.count(); n++) {
+		if (!_multimedia.contains(_audio[n])) _multimedia << _audio[n];
+	}
 }
 
 Extensions::~Extensions() {
