@@ -1,5 +1,9 @@
 [b]Version 0.5.63 (not released yet)[/b]:
 
+(2007-11-20)
+ * (Internal change) Added a new list in extensions: multimedia, which
+   includes both video and audio extensions.
+
 (2007-11-19)
  * Added patch by redxii, which provide a new icon for file associations
    under Windows.
